--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-<!DOCTYPE html><html lang=""><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="title" content="Chronolysia | Exploration to the Unknown"><meta name="description" content="Select your language between English, Japenese, French, German..."><title>Chronolysia | Exploration to the Unknown</title><style>body {font-family: Arial, sans-serif;background-color: #f4f4f9;color: #333;margin: 0;padding: 0;height: 100vh;display: flex;justify-content: center;align-items: center;overflow: hidden;}.container {max-width: 600px;height: fit-content;padding: 20px;margin: 10px;background-color: #fff;border-radius: 8px;box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);}h1 {font-size: 2.5rem;color: #333;margin-bottom: 20px;}p {font-size: 1.2rem;color: #555;}.btn {margin: 10px;font-size: 1.1rem;padding: 12px 30px;border-radius: 50px;cursor: pointer;transition: transform 0.3s, box-shadow 0.3s;}.btn:hover {transform: scale(1.06);box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);}.btn:active {transform: scale(1.1);box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);}.btn-primary {background-color: #007bff;color: white;border: none;}.btn-primary:hover {background-color: #0056b3;}.btn-secondary {background-color: #6c757d;color: white;border: none;}.btn-secondary:hover {background-color: #5a6268;}.btn-warning {background-color: #ffc107;color: black;border: none;}.btn-warning:hover {background-color: #e0a800;}.btn-success {background-color: #28a745;color: white;border: none;}.btn-success:hover {background-color: #218838;}.btn-danger {background-color: #dc3545;color: white;border: none;}.btn-danger:hover {background-color: #c82333;}.text-center {text-align: center;}small {font-size: 0.4em;}@media (max-width: 768px) {h1 {font-size: 2rem;}.btn {font-size: 1rem;padding: 8px 16px;}}</style><script>function redirectToLanguage(lang) {window.location.href = `./${lang}/`;}</script></head><body><div class="container mt-5"><h1 class="text-center">Welcome to Chronolysia<br><small>Not redirected? Select your language.</small></h1><p class="text-center">Select your language:</p><div class="text-center"><button class="btn btn-primary" onclick="redirectToLanguage('en')">English</button><button class="btn btn-secondary" onclick="redirectToLanguage('fr')">Français</button><button class="btn btn-danger" onclick="redirectToLanguage('ja')">日本語</button><button class="btn btn-success" onclick="redirectToLanguage('de')">Deutsch</button></div></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" content="Chronolysia | Exploration to the Unknown">
+  <meta name="description" content="Select your language between English, Japanese, French, German...">
+  <meta name="keywords" content="Chronolysia, exploration, unknown, game, multiplayer, language selection, English, French, German, Japanese, multilingual">
+  <meta name="author" content="Chronolysia Team">
+  <meta property="og:title" content="Chronolysia | Exploration to the Unknown">
+  <meta property="og:description" content="Select your language between English, Japanese, French, German...">
+  <meta property="og:image" content="https://chronolysia.github.io/chronolysia/img/logo.png">
+  <meta property="og:url" content="https://chronolysia.github.io/chronolysia/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Chronolysia">
+  <meta name="twitter:description" content="Exploration to the Unknown">
+  <meta name="twitter:image" content="https://chronolysia.github.io/chronolysia/img/logo.png">
+  <meta name="twitter:site" content="@chronolysia_dev">
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="rating" content="General">
+  <title>Chronolysia | Exploration to the Unknown</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f9;
+      color: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      max-width: 600px;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+    .btn {
+      margin: 10px;
+      font-size: 1.1rem;
+      padding: 12px 30px;
+      border-radius: 50px;
+      display: inline-block;
+      text-align: center;
+      transition: transform 0.3s, box-shadow 0.3s;
+      text-decoration: none;
+    }
+    .btn:hover { transform: scale(1.06); box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15); }
+    .btn:active { transform: scale(1.1); box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15); }
+    .btn-primary { background-color: #007bff; color: white; }
+    .btn-primary:hover { background-color: #0056b3; }
+    .btn-secondary { background-color: #6c757d; color: white; }
+    .btn-secondary:hover { background-color: #5a6268; }
+    .btn-danger { background-color: #dc3545; color: white; }
+    .btn-danger:hover { background-color: #c82333; }
+    .btn-success { background-color: #28a745; color: white; }
+    .btn-success:hover { background-color: #218838; }
+    .text-center { text-align: center; }
+    small { font-size: 0.8rem; }
+    @media (max-width: 768px) {
+      h1 { font-size: 2rem; }
+      .btn { font-size: 1rem; padding: 8px 16px; }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1 class="text-center">Welcome to Chronolysia<br><small>Not redirected? Select your language.</small></h1>
+    <p class="text-center">Select your language:</p>
+    <div class="text-center">
+      <a href="./en/" class="btn btn-primary">English</a>
+      <a href="./fr/" class="btn btn-secondary">Français</a>
+      <a href="./ja/" class="btn btn-danger">日本語</a>
+      <a href="./de/" class="btn btn-success">Deutsch</a>
+    </div>
+  </div>
+</body>
+</html>
