--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="title" content="Chronolysia | Exploration to the Unknown">
-<meta name="description" content="Select your language between English, Japanese, French, German...">
-<meta name="keywords" content="Chronolysia, exploration, unknown, game, multiplayer, language selection, English, French, German, Japanese, multilingual">
+<meta name="description" content="Chronolysia is an immersive open-world anime-style exploration game where players can embark on epic adventures. Whether you play solo or with friends in multiplayer mode, discover vibrant worlds, unravel mysteries, and unlock hidden treasures in this visually stunning, action-packed experience." />
+<meta name="description" content="Chronolysia 是一款沉浸式的开放世界动漫风格探索游戏，玩家可以展开史诗冒险。无论是单人游戏还是多人模式，与朋友一起探索多彩的世界，揭开谜团，解锁隐藏的宝藏，体验这款视觉震撼、充满动作的游戏。" />
+<meta name="description" content="Chronolysia एक रोमांचक ओपन-वर्ल्ड एनीमे-शैली अन्वेषण खेल है, जहाँ खिलाड़ी महाकाव्य साहसिक यात्राओं पर निकल सकते हैं। चाहे आप अकेले खेलें या दोस्तों के साथ मल्टीप्लायर मोड में, इस दृश्यात्मक रूप से प्रभावशाली और एक्शन से भरे अनुभव में रंगीन दुनियाओं का अन्वेषण करें और रहस्यों को उजागर करें।" />
+<meta name="description" content="Chronolysia es un juego de exploración en mundo abierto con estilo anime donde los jugadores pueden embarcarse en épicas aventuras. Juega en solitario o en modo multijugador con amigos, descubre mundos vibrantes, desvela misterios y desbloquea tesoros escondidos en esta experiencia visualmente impresionante y llena de acción." />
+<meta name="description" content="Chronolysia est un jeu d'exploration en monde ouvert de style anime où les joueurs peuvent se lancer dans des aventures épiques. Que vous jouiez en solo ou en mode multijoueur avec des amis, découvrez des mondes vibrants, déchiffrez des mystères et débloquez des trésors cachés dans cette expérience visuellement impressionnante et pleine d'action." />
+<meta name="description" content="كرونوليسيا هي لعبة استكشاف عالم مفتوح بأسلوب الأنمي حيث يمكن للاعبين الانطلاق في مغامرات ملحمية. سواء كنت تلعب بمفردك أو مع الأصدقاء في وضع اللاعبين المتعددين، استكشف عوالم ملونة، اكشف عن الألغاز، واكتشف الكنوز المخفية في هذه التجربة المذهلة بصرياً والمليئة بالحركة." />
+<meta name="description" content="Chronolysia একটি মোহিত-করা ওপেন-ওয়ার্ল্ড অ্যানিমে-স্টাইল অনুসন্ধান গেম যেখানে খেলোয়াড়রা মহাকাব্যিক দুঃসাহসিক অভিযান শুরু করতে পারে। আপনি এককভাবে খেলুন বা বন্ধুদের সাথে মাল্টিপ্লেয়ার মোডে খেলুন, রঙিন পৃথিবী অন্বেষণ করুন, রহস্য উন্মোচন করুন এবং এই চমকপ্রদ দৃশ্যমান, অ্যাকশন-প্যাকড অভিজ্ঞতায় লুকানো ধন খুঁজে বের করুন।" />
+<meta name="description" content="Chronolysia é um jogo de exploração de mundo aberto com estilo anime, onde os jogadores podem embarcar em aventuras épicas. Jogue sozinho ou com amigos no modo multiplayer, explore mundos vibrantes, desvende mistérios e desbloqueie tesouros escondidos nesta experiência visualmente impressionante e cheia de ação." />
+<meta name="description" content="Chronolysia — это захватывающая игра с открытым миром в стиле аниме, где игроки могут отправиться в эпические приключения. Играйте в одиночку или в многопользовательском режиме с друзьями, исследуйте яркие миры, раскрывайте тайны и находите скрытые сокровища в этом визуально впечатляющем и полном действия игровом опыте." />
+<meta name="description" content="Chronolysiaは、プレイヤーが壮大な冒険に出かけることができるオープンワールドのアニメスタイル探索ゲームです。シングルプレイヤーまたはマルチプレイヤーモードで友達と一緒に、色彩豊かな世界を探索し、謎を解き明かし、隠された宝物を発見して、視覚的に魅力的でアクション満載の体験を楽しみましょう。" />
+<meta name="description" content="Chronolysia ist ein fesselndes Open-World-Spiel im Anime-Stil, in dem Spieler epische Abenteuer erleben können. Ob im Einzelspieler- oder Mehrspielermodus mit Freunden, erkunde lebendige Welten, entschlüssle Geheimnisse und entdecke versteckte Schätze in dieser visuell beeindruckenden und actionreichen Erfahrung." />
+<meta name="description" content="Chronolysia는 플레이어가 서사적인 모험을 떠날 수 있는 몰입감 있는 오픈 월드 애니메이션 스타일 탐험 게임입니다. 싱글 플레이어 또는 친구들과 함께하는 멀티플레이어 모드에서 다채로운 세상을 탐험하고, 미스터리를 풀고, 숨겨진 보물을 찾아 이 시각적으로 멋지고 액션이 가득한 경험을 즐기세요." />
+<meta name="description" content="Chronolysia è un gioco di esplorazione open-world in stile anime dove i giocatori possono intraprendere epiche avventure. Gioca da solo o con amici in modalità multiplayer, esplora mondi vibranti, svela misteri e scopri tesori nascosti in questa esperienza visivamente impressionante e ricca di azione." />
+<meta name="description" content="Chronolysia, oyuncuların epik maceralara atılabileceği bir açık dünya anime tarzı keşif oyunudur. Tek başınıza ya da arkadaşlarınızla çok oyunculu modda oynayın, renkli dünyaları keşfedin, sırları çözün ve bu görsel açıdan etkileyici ve aksiyon dolu deneyimde gizli hazineleri keşfedin." />
+<meta name="description" content="Chronolysia to wciągająca gra z otwartym światem w stylu anime, w której gracze mogą wyruszyć na epickie przygody. Graj solo lub z przyjaciółmi w trybie multiplayer, odkrywaj kolorowe światy, rozwiązuj tajemnice i odkrywaj ukryte skarby w tej wizualnie oszałamiającej i pełnej akcji grze." />
+<meta name="description" content="Chronolysia — це захоплююча гра з відкритим світом у стилі аніме, де гравці можуть вирушити в епічні пригоди. Грайте самостійно або з друзями в багатокористувацькому режимі, досліджуйте кольорові світи, розгадуйте таємниці та знаходьте сховані скарби в цьому візуально вражаючому та динамічному досвіді." />
+<meta name="description" content="Chronolysia este un joc captivant de explorare în stil anime cu un lume deschisă, în care jucătorii pot porni în aventuri epice. Joacă-te singur sau cu prietenii în modul multiplayer, explorează lumi vibrante, dezvăluie mistere și descoperă comori ascunse în această experiență vizual impresionantă și plină de acțiune." />
+<meta name="keywords" content="Chronolysia, exploration, unknown, game, multiplayer, language selection, English, French, German, Japanese, multilingual" lang="en" />
+<meta name="keywords" content="Chronolysia, 开放世界, 动漫游戏, 多人游戏, 探索, RPG, 动作, 冒险, 动漫风格, 游戏, language selection, 英语, 法语, 德语, 日语, 多语言" lang="zh" />
+<meta name="keywords" content="Chronolysia, ओपन वर्ल्ड, एनीमे गेम, मल्टीप्लेयर, अन्वेषण, RPG, एक्शन, साहसिक, एनीमे-शैली, खेल, language selection, अंग्रेजी, फ्रेंच, जर्मन, जापानी, बहुभाषी" lang="hi" />
+<meta name="keywords" content="Chronolysia, mundo abierto, juego de anime, multijugador, exploración, RPG, acción, aventura, estilo anime, juego, language selection, inglés, francés, alemán, japonés, multilingüe" lang="es" />
+<meta name="keywords" content="Chronolysia, monde ouvert, jeu anime, multijoueur, exploration, RPG, action, aventure, style anime, jeu, language selection, anglais, français, allemand, japonais, multilingue" lang="fr" />
+<meta name="keywords" content="كرونوليسيا, عالم مفتوح, لعبة أنمي, متعدد اللاعبين, استكشاف, RPG, أكشن, مغامرة, أسلوب أنمي, لعبة, language selection, الإنجليزية, الفرنسية, الألمانية, اليابانية, متعددة اللغات" lang="ar" />
+<meta name="keywords" content="Chronolysia, ওপেন ওয়ার্ল্ড, অ্যানিমে গেম, মাল্টিপ্লেয়ার, অনুসন্ধান, RPG, অ্যাকশন, দুঃসাহসিক, অ্যানিমে-স্টাইল, গেম, language selection, ইংরেজি, ফরাসি, জার্মান, জাপানি, বহু ভাষিক" lang="bn" />
+<meta name="keywords" content="Chronolysia, mundo aberto, jogo de anime, multiplayer, exploração, RPG, ação, aventura, estilo anime, jogo, language selection, inglês, francês, alemão, japonês, multilíngue" lang="pt" />
+<meta name="keywords" content="Chronolysia, открытый мир, аниме игра, многопользовательская игра, исследование, RPG, экшн, приключения, аниме стиль, игра, language selection, английский, французский, немецкий, японский, многоязычный" lang="ru" />
+<meta name="keywords" content="Chronolysia, オープンワールド, アニメゲーム, マルチプレイヤー, 探索, RPG, アクション, 冒険, アニメスタイル, ゲーム, language selection, 英語, フランス語, ドイツ語, 日本語, 多言語" lang="ja" />
+<meta name="keywords" content="Chronolysia, Open-World, Anime-Spiel, Mehrspieler, Erkundung, RPG, Action, Abenteuer, Anime-Stil, Spiel, language selection, Englisch, Französisch, Deutsch, Japanisch, mehrsprachig" lang="de" />
+<meta name="keywords" content="Chronolysia, 오픈 월드, 애니메이션 게임, 멀티플레이어, 탐험, RPG, 액션, 모험, 애니메이션 스타일, 게임, language selection, 영어, 프랑스어, 독일어, 일본어, 다국어" lang="ko" />
+<meta name="keywords" content="Chronolysia, open world, gioco anime, multiplayer, esplorazione, RPG, azione, avventura, stile anime, gioco, language selection, inglese, francese, tedesco, giapponese, multilingue" lang="it" />
+<meta name="keywords" content="Chronolysia, açık dünya, anime oyunu, çok oyunculu, keşif, RPG, aksiyon, macera, anime tarzı, oyun, language selection, İngilizce, Fransızca, Almanca, Japonca, çok dilli" lang="tr" />
+<meta name="keywords" content="Chronolysia, otwarty świat, gra anime, tryb wieloosobowy, eksploracja, RPG, akcja, przygoda, styl anime, gra, language selection, angielski, francuski, niemiecki, japoński, wielojęzyczny" lang="pl" />
+<meta name="keywords" content="Chronolysia, відкритий світ, аніме гра, багатокористувацька гра, дослідження, RPG, екшн, пригоди, стиль аніме, гра, language selection, англійська, французька, німецька, японська, багатомовний" lang="uk" />
+<meta name="keywords" content="Chronolysia, lume deschisă, joc anime, multiplayer, explorare, RPG, acțiune, aventură, stil anime, joc, language selection, engleză, franceză, germană, japoneză, multilingv" lang="ro" />
 <meta name="author" content="Chronolysia Team">
 <meta property="og:title" content="Chronolysia | Exploration to the Unknown">
 <meta property="og:description" content="Select your language between English, Japanese, French, German...">
@@ -19,7 +51,79 @@
 <meta name="twitter:site" content="@chronolysia_dev">
 <meta name="robots" content="index, follow">
 <meta name="googlebot" content="index, follow">
-<meta name="language" content="English">
+<meta http-equiv="Content-Language" content="en">
+<meta http-equiv="Content-Language" content="zh">
+<meta http-equiv="Content-Language" content="hi">
+<meta http-equiv="Content-Language" content="es">
+<meta http-equiv="Content-Language" content="fr">
+<meta http-equiv="Content-Language" content="ar">
+<meta http-equiv="Content-Language" content="bn">
+<meta http-equiv="Content-Language" content="pt">
+<meta http-equiv="Content-Language" content="ru">
+<meta http-equiv="Content-Language" content="ja">
+<meta http-equiv="Content-Language" content="de">
+<meta http-equiv="Content-Language" content="ko">
+<meta http-equiv="Content-Language" content="it">
+<meta http-equiv="Content-Language" content="tr">
+<meta http-equiv="Content-Language" content="pl">
+<meta http-equiv="Content-Language" content="uk">
+<meta http-equiv="Content-Language" content="ro">
+<meta http-equiv="Content-Language" content="nl">
+<meta http-equiv="Content-Language" content="vi">
+<meta http-equiv="Content-Language" content="th">
+<meta http-equiv="Content-Language" content="el">
+<meta http-equiv="Content-Language" content="ms">
+<meta http-equiv="Content-Language" content="fa">
+<meta http-equiv="Content-Language" content="sv">
+<meta http-equiv="Content-Language" content="no">
+<meta http-equiv="Content-Language" content="da">
+<meta http-equiv="Content-Language" content="fi">
+<meta http-equiv="Content-Language" content="cs">
+<meta http-equiv="Content-Language" content="hu">
+<meta http-equiv="Content-Language" content="sk">
+<meta http-equiv="Content-Language" content="he">
+<meta http-equiv="Content-Language" content="bg">
+<meta http-equiv="Content-Language" content="sr">
+<meta http-equiv="Content-Language" content="hr">
+<meta http-equiv="Content-Language" content="bs">
+<meta http-equiv="Content-Language" content="sl">
+<meta http-equiv="Content-Language" content="et">
+<meta http-equiv="Content-Language" content="la">
+<meta http-equiv="Content-Language" content="sw">
+<meta http-equiv="Content-Language" content="sq">
+<meta http-equiv="Content-Language" content="ca">
+<meta http-equiv="Content-Language" content="mt">
+<meta http-equiv="Content-Language" content="is">
+<meta http-equiv="Content-Language" content="tl">
+<meta http-equiv="Content-Language" content="lv">
+<meta http-equiv="Content-Language" content="lt">
+<meta http-equiv="Content-Language" content="ne">
+<meta http-equiv="Content-Language" content="pa">
+<meta http-equiv="Content-Language" content="te">
+<meta http-equiv="Content-Language" content="ml">
+<meta http-equiv="Content-Language" content="mr">
+<meta http-equiv="Content-Language" content="ta">
+<meta http-equiv="Content-Language" content="kn">
+<meta http-equiv="Content-Language" content="gu">
+<meta http-equiv="Content-Language" content="or">
+<meta http-equiv="Content-Language" content="si">
+<meta http-equiv="Content-Language" content="hy">
+<meta http-equiv="Content-Language" content="km">
+<meta http-equiv="Content-Language" content="lo">
+<meta http-equiv="Content-Language" content="my">
+<meta http-equiv="Content-Language" content="np">
+<meta http-equiv="Content-Language" content="am">
+<meta http-equiv="Content-Language" content="mi">
+<meta http-equiv="Content-Language" content="ba">
+<meta http-equiv="Content-Language" content="sq">
+<meta http-equiv="Content-Language" content="az">
+<meta http-equiv="Content-Language" content="af">
+<meta http-equiv="Content-Language" content="be">
+<meta http-equiv="Content-Language" content="ps">
+<meta http-equiv="Content-Language" content="uz">
+<meta http-equiv="Content-Language" content="mn">
+<meta http-equiv="Content-Language" content="yi">
+<meta http-equiv="Content-Language" content="sd">
 <meta name="rating" content="General">
 <title>Chronolysia | Exploration to the Unknown</title>
 <link rel="icon" type="image/x-icon" href="https://chronolysia.github.io/chronolysia/img/chronolysia.png"/>
